--- a/Cargo.toml
+++ b/Cargo.toml
@@ -6,4 +6,13 @@ edition = "2018"
 
 [dependencies]
 stdweb = "0.4.2"
-yew = { git = "https://github.com/DenisKolodin/yew" }
+yew = { git = "https://github.com/DenisKolodin/yew", features = ["toml", "yaml", "msgpack", "cbor"] }
+
+[target.'cfg(all(target_arch = "wasm32", not(cargo_web)))'.dependencies]
+wasm-bindgen = "0.2"
+
+[dev-dependencies]
+wasm-bindgen-test = "0.2"
+
+[target.'cfg(all(target_arch = "wasm32", not(cargo_web)))'.dev-dependencies]
+wasm-bindgen-test = "0.2"
